--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-black
-ruff
-pytest
-pyyaml
+# DDC Core v2.0 Ultimate Edition - Pinned Dependencies
+streamlit==1.28.1
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+joblib==1.3.2
+python-dotenv==1.0.0
+altair==5.1.2
+
+# Development Tools (existing)
+black==23.7.0
+ruff==0.0.287
+pytest==7.4.0
+pyyaml==6.0.1
